apps/omni-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni-tools
  namespace: omni-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: omni-tools
  template:
    metadata:
      labels:
        app: omni-tools
    spec:
      containers:
        - name: omni-tools
          image: iib0011/omni-tools:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 64Mi
              cpu: "250m"
            requests:
              memory: 32Mi
              cpu: "10m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETGID
                - SETUID
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi
        - name: nginx-cache
          emptyDir:
            sizeLimit: 16Mi
        - name: nginx-run
          emptyDir:
            sizeLimit: 1Mi
