apps/omni-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-tools
  namespace: omni-tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: omni-tools.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: omni-tools
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - omni-tools.sanxer.dk
      secretName: omni-tools-tls
